<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ode solver II</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    
    <string name="single_equation">Single Equation ></string>
    <string name="system_of_equations">System of equations ></string>

    <string name="plot">Plot</string>
    <string name="dy_by_dx">  dy/dx = </string>
    <string name="x0">x0 = </string>
    <string name="y0">y0 = </string>
    <string name="xfinal">xfinal = </string>
    <string name="stepsize">Stepsize = </string>
    <string name="precision">Precision(digits) = </string>
    <string name="method">Choose method : </string>
    
    <string name="answer">Answer : </string>

    <string-array name="methods_array">
        <item>Simple Euler</item>
        <item>Modified Euler</item>
        <item>Improved Euler</item>
        <item>Runge Kutta order 4</item>
    </string-array>

    <string name="solve">Solve</string>
    <string name="output">Output : </string>
    <string name="default_et1">2*(y/x)+x^3</string>
    <string name="default_et2">1</string>
    <string name="default_et3">0.5</string>
    <string name="default_et4">1.8</string>
    <string name="default_et5">0.2</string>
    <string name="default_et6">10</string>
    <string name="default_maxError">0.1</string>
    
    <string name="dx_by_dt">dx/dt = </string>
    <string name="dy_by_dt">dy/dt = </string>
    <string name="t0">t0 = </string>
    <string name="default_t0">0</string>
    <string name="default_x0">-1</string>
    <string name="default_y0">1</string>
    <string name="tfinal">tfinal = </string>
    <string name="default_tfinal">1.8</string>
    <string name="default_precision_system">5</string>
    
    <string name="single_step">Single-Step methods ></string>
    <string name="iterative">Multi-Step(Iterative) methods ></string>
    
    <string name="default_et1_system">sin(t)+cos(x)+sin(y)</string>
    <string name="default_et2_system">cos(t)+sin(y)</string>
    
    <string name="menu_help">Help</string>
    <string name="new_output">O/p:</string>

    <string name="milne_method">Milne-Simpson Method</string>
    <string name="starter_method">Choose starter method : </string>
    
    <string name="intervalInfo">Enter values for the Interval [x0,xfinal]</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="maxError">Error for convergence</string>
    
    
    <string name="btn_dot">.</string>
    <string name="btn_delete">DEL</string>
    <string name="btn_AC">AC</string>
    <string name="btn_left">\u2190</string>
    <string name="btn_right">\u2192</string>
    <string name="btn_1">1</string>
    <string name="btn_2">2</string>
    <string name="btn_3">3</string>
    <string name="btn_4">4</string>
    <string name="btn_5">5</string>
    <string name="btn_6">6</string>
    <string name="btn_7">7</string>
    <string name="btn_8">8</string>
    <string name="btn_9">9</string>
    <string name="btn_0">0</string>
    
    <string name="btn_X">x</string>
    <string name="btn_Y">y</string>
    <string name="btn_openParenthesis">(</string>
    <string name="btn_closeParenthesis">)</string>
    <string name="btn_plus">+</string>
    <string name="btn_minus">-</string>
    <string name="btn_mul">*</string>
    <string name="btn_div">/</string>
    <string name="btn_pow">^</string>
    <string name="btn_fx">fx</string>
    
    <!-- 
    
    <string name="title">System of Differential equations(IVP)</string>
    <string name="dx_by_dt">dx/dt</string>
    <string name="dy_by_dt">dy/dt</string>
    <string name="t0">t0</string>
    <string name="x0">x0</string>
    <string name="y0">y0</string>
    <string name="stepsize">stepsize</string>
    <string name="numOfIntv">num of intervals</string>
    
    -->
    
</resources>