<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@color/ColorBack"
    tools:context=".InputsFormMilne" >
<RelativeLayout 
        android:layout_width="match_parent"
        android:layout_height="match_parent"
    
        android:layout_marginLeft="5dp"
    android:layout_marginTop="5dp"
    android:layout_marginRight="5dp"
    >
    <TextView 
        android:id="@+id/milneHead"
                android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:text="@string/milne_method"
        android:textStyle="bold"
        android:textSize="20sp"
        />
    <TextView
        android:id="@+id/textView_StarterMethod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/milneHead"
        android:text="@string/starter_method"
        android:textSize="20sp"
         />

  <!--  <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp" >
-->
        <TableRow
            android:id="@+id/Head"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView_StarterMethod"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="10dp" >

            <Spinner
                android:id="@+id/spinnerForMethods"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/solveButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="solve"
                android:text="@string/solve" />
           
        </TableRow>
 
        <TableRow
            android:id="@+id/function"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Head"
            android:background="@color/Color2"
            >
<!-- 
    
    android:fitsSystemWindows="true"
    -->
    

            <TextView
                android:id="@+id/textView_dy_by_dx"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dy_by_dx"
                android:textColor="@color/ColorWhite"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/editText_dy_by_dx"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text"
                android:text="@string/default_et1"
                android:textColor="@color/ColorWhite" />

            </TableRow>
      
<TextView
                android:id="@+id/intervalInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/intervalInfo"
 				android:layout_below="@+id/function"
                android:textSize="20sp" />
 
 
        <ScrollView 
    android:id="@+id/Scroll_1"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/intervalInfo"
   
    >
            <RelativeLayout 
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
                
                >
 <TableLayout
     		android:id="@+id/variables"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
         >

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView_x0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/x0"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/editText_x0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="5"
                android:inputType="numberDecimal"
                android:text="@string/default_et2" />

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView_y0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/y0"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/editText_y0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="5"
                android:inputType="numberDecimal"
                android:text="@string/default_et3" />

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView_xfinal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/xfinal"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/editText_xfinal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="5"
                android:inputType="numberDecimal"
                android:text="@string/default_et4" />

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView_stepsize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stepsize"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/editText_stepsize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="5"
                android:inputType="numberDecimal"
                android:text="@string/default_et5" />

        </TableRow>

        <TableRow android:layout_width="wrap_content" >

            <TextView
                android:id="@+id/textView_precision"
                android:text="@string/precision"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/editText_precision"
                android:ems="5"
                android:inputType="number"
                android:text="@string/default_et6"
                 />
        </TableRow>
         <TableRow android:layout_width="wrap_content" >

            <TextView
                android:id="@+id/textView_maxError"
                android:text="@string/maxError"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/editText_maxError"
                android:ems="5"
                android:inputType="number"
                android:text="@string/default_maxError"
                 />
        </TableRow>
    </TableLayout>
  
              <TableLayout 
               android:layout_below="@+id/variables"
                android:layout_height="wrap_content"
           android:layout_width="wrap_content"
           
               >
        <TableRow 
            
             android:layout_height="wrap_content"
           android:layout_width="wrap_content"
           
            >
            <Button 
                android:id="@+id/btn_special"
                android:text="@string/btn_fx"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
            <Button 
                android:id="@+id/btn_AC"
                android:text="@string/btn_AC"
                android:textStyle="bold|italic"             
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onBtn_ACClicked"
                />
            <Button 
                android:id="@+id/btn_delete"
                android:text="@string/btn_delete"
                android:textStyle="bold|italic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onBtn_deleteClicked"
                />
            <Button 
                android:id="@+id/btn_left"
                android:text="@string/btn_left"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />            
            <Button 
                android:id="@+id/btn_right"
                android:text="@string/btn_right"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
            </TableRow>
        <TableRow 
            
             android:layout_height="wrap_content"
           android:layout_width="wrap_content"
           
            >
            <Button 
                android:id="@+id/btn_7"
                android:text="@string/btn_7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onBtn_7Clicked"
                />
            <Button 
                android:id="@+id/btn_8"
                android:text="@string/btn_8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onBtn_8Clicked"
                />
            <Button 
                android:id="@+id/btn_9"
                android:text="@string/btn_9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onBtn_9Clicked"
                />            
            <Button 
                android:id="@+id/btn_X"
                android:text="@string/btn_X"
                android:textStyle="bold|italic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onBtn_XClicked"
                
                />
            <Button 
                android:id="@+id/btn_Y"
                android:text="@string/btn_Y"
                android:textStyle="bold|italic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onBtn_YClicked"
                />
        </TableRow>
        <TableRow
            android:layout_height="wrap_content"
           android:layout_width="wrap_content"
             >
            <Button 
                android:id="@+id/btn_4"
                android:text="@string/btn_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onBtn_4Clicked"
                />
            <Button 
                android:id="@+id/btn_5"
                android:text="@string/btn_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onBtn_5Clicked"
                />
            <Button 
                android:id="@+id/btn_6"
                android:text="@string/btn_6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onBtn_6Clicked"
                />
            <Button 
                android:id="@+id/btn_openParenthesis"
                android:text="@string/btn_openParenthesis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onBtn_openClicked"
                />
            <Button 
                android:id="@+id/btn_closeParenthesis"
                android:text="@string/btn_closeParenthesis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onBtn_closedClicked"
                />            
        </TableRow>      
        
		<TableRow
		    android:layout_height="wrap_content"
           android:layout_width="wrap_content"
		     >
            <Button 
                android:id="@+id/btn_1"
                android:text="@string/btn_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onBtn_1Clicked"
                />
            <Button 
                android:id="@+id/btn_2"
                android:text="@string/btn_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onBtn_2Clicked"
                />
            <Button 
                android:id="@+id/btn_3"
                android:text="@string/btn_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onBtn_3Clicked"
                />
           <Button 
                android:id="@+id/btn_plus"
                android:text="@string/btn_plus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onBtn_plusClicked"
                />
            <Button 
                android:id="@+id/btn_minus"
                android:text="@string/btn_minus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onBtn_minusClicked"
                />            
        </TableRow>
		
        <TableRow
            android:layout_height="wrap_content"
           android:layout_width="wrap_content"
            >
            <Button 
                android:id="@+id/btn_0"
                android:text="@string/btn_0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onBtn_0Clicked"
                />            
            <Button 
                android:id="@+id/btn_mul"
                android:text="@string/btn_mul"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onBtn_mulClicked"
                />
            <Button 
                android:id="@+id/btn_div"
                android:text="@string/btn_div"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onBtn_divClicked"
                />
            <Button 
                android:id="@+id/btn_pow"
                android:text="@string/btn_pow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onBtn_powClicked"
                />
            <Button 
                android:id="@+id/btn_dot"
                android:text="@string/btn_dot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onBtn_dotClicked"
                />
            

        </TableRow>
        </TableLayout>
      </RelativeLayout>
  </ScrollView>
 
</RelativeLayout>

</RelativeLayout>